# gowt.old

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  tox.ini
docs/: api.rst  conf.py  index.rst
gowt/: __init__.py  __main__.py
src/gowt/: __init__.py  __main__.py  repository.py
stubs/flit_core/: versionno.pyi
stubs/pkgcore/: exceptions.pyi
stubs/pkgcore/config/: basics.pyi  central.pyi  domain.pyi
stubs/pkgcore/ebuild/: domain.pyi  repository.pyi
stubs/pkgcore/repository/: errors.pyi  filtered.pyi  prototype.pyi
stubs/pkgcore/util/: commandline.pyi
stubs/snakeoil/cli/: arghparse.pyi  exceptions.pyi  tool.pyi
tests/: __init___test.py  __main___test.py
