[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gowt"
dynamic = ["version", "description"]
readme = "README.rst"
requires-python = ">=3.9, <3.12"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pkgcore",
    "snakeoil"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "ruff",
]

[project.urls]
homepage = "https://github.com/chramb/gowt"
repository = "https://github.com/chramb/gowt.git"

[project.scripts]
gowt = "gowt.__main__:main"


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"
skip = "__init__.py,tests"
sections = ["FUTURE","STDLIB", "THIRDPARTY", "LOCALFOLDER"]
force_sort_within_sections = true
line_length = 140
lines_between_sections = 1

[tool.ruff]
extend-select = ["C4", "SIM", "TCH", "W", "I001"] # Default: E,F
ignore = []
line-length = 140
show-fixes = true
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.pydocstyle]
convention = "pep257"
